--- a/curve.html
+++ b/curve.html
@@ -26,7 +26,7 @@
 			<th>Condition</th>
 		</tr>
 		<tr>
-			<td><input type=checkbox></td>			
+			<td><input id=cbFld type=checkbox></td>			
 			<td><input></td>
 			<td><input></td>			
 		</tr>
@@ -113,7 +113,17 @@
 		dom('canvas').width+=0;
 		switch (checked().length) {
 			case 2:
-				pg('button').show();
+				if (checked().last().is('#cbFld')) {
+					if ($.isNumeric(checked().last().parent().parent().find('input').eq(1).val())
+						&& $.isNumeric(checked().last().parent().parent().find('input').eq(2).val())) {
+							pg('button').show();
+						} else {
+							pg('button').hide();
+						}
+				} else {
+					pg('button').show();
+				}
+				
 				break;
 			case 3:				
 				chk(pg(':checkbox'),false);
