--- a/curve.html
+++ b/curve.html
@@ -113,18 +113,12 @@
 		dom('canvas').width+=0;
 		switch (checked().length) {
 			case 2:
-				const inp = checked().last().parent().parent().find('input');					
-				if (inp.length>1) {
-					if ($.isNumeric(inp.eq(1).val())
-						&& $.isNumeric(inp.eq(2).val())) {
-							pg('button').show();
-						} else {
-							pg('button').hide();
-						}
-				} else {
+				const inp = checked().last().parent().parent().find('input');
+				if (inp.length==1 || ($.isNumeric(inp.eq(1).val()) && $.isNumeric(inp.eq(2).val()))) {
 					pg('button').show();
+				} else {
+					pg('button').hide();
 				}
-				
 				break;
 			case 3:				
 				chk(pg(':checkbox'),false);
