--- a/curve.html
+++ b/curve.html
@@ -111,21 +111,20 @@
 	pg('input').change(function (){
 		Cnv.hide();
 		dom('canvas').width+=0;
+		let show='hide';
 		switch (checked().length) {			
 			case 2:
 				const inp = checked().last().parent().parent().find('input');
 				if (inp.length==1 || ($.isNumeric(inp.eq(1).val()) && $.isNumeric(inp.eq(2).val()))) {
-					pg('button').show();
-				} else {
-					hideBtn();
+					show = 'show';
 				}
 				break;
 			case 3:				
 				chk(pg(':checkbox'),false);
 				chk(this,true);
-			default:
-				hideBtn();
 		}
+		pg('button')[show]();
+
 	});
 </script>
 
