--- a/curve.html
+++ b/curve.html
@@ -18,6 +18,7 @@
 </style>
 <div>
 	<h1>System Head Curve</h1>
+	<div style='margin-bottom:1rem;xfont-style:italic'>Choose two points for <strong>head</strong> and <strong>flow</strong></div>
 	<table>
 		<tr>
 			<th></th>			
