--- a/curve.html
+++ b/curve.html
@@ -73,7 +73,7 @@
 				xStep = Math.round(xMax / 15 / x10) * x10,
 				xCnt = Math.ceil (xMax / xStep),
 				y = Math.max(h1,h2);
-debugger;
+
 		$('#Hs').text(rnd(h1-(Math.pow(f1,1.9) * (h2-h1) / (Math.pow(f2,1.9) - Math.pow(f1,1.9)))));
 		showHdBtn('hide');
 		$('#plot').show();
@@ -86,7 +86,7 @@ debugger;
 		ctx.font = '12px san serif';
 		PAD = 50;
 		function xPos(x) {
-			return x*(cnv.width-PAD*2)/xMax+PAD;
+			return x*(cnv.width-PAD*2)/(xStep*xCnt)+PAD;
 		}
 		function yPos(y) {
 			return (300-y)*(cnv.height-PAD*2)/300+PAD;
