--- a/curve.html
+++ b/curve.html
@@ -127,7 +127,11 @@
 		ctx.lineWidth = 2;
 		ctx.strokeStyle = "yellow";	
 		ctx.beginPath();
-
+		
+		for (let x=0; x<=xMax; x+=xStep/5) {
+			ctx.lineTo(xPos(x), yPos(yMax-x));
+		
+		}
 		for (let val of [ [0,57.6], [600,67.3], [1800,144.8], [2400,212.7], [3000,300] ]) {
 			//ctx.lineTo(xPos(val[0]), yPos(val[1]));
 		}
