--- a/curve.html
+++ b/curve.html
@@ -67,6 +67,12 @@
 		}
 		return td.find('input').val();
 	}
+	function steps(v1,v2) {
+		const 	max = Math.max(v2,v2),
+				m10 = Math.pow(10, Math.floor(Math.log10(max / 15))),
+				step = Math.round(max / 15 / m10) * m10;
+		return [max, step, Math.ceil(max / step)];
+	}
 	function plot() {
 		const 	r1 = pparIdx(checked().first()),
 				f1 = tblTxt(r1,1),
@@ -74,10 +80,12 @@
 				r2 = pparIdx(checked().last()),			
 				f2 = tblTxt(r2,1),
 				h2 = tblTxt(r2,2),  
-				xMax = Math.max(f1,f2),
-				x10 = Math.pow(10,Math.floor(Math.log10(xMax/15))),
-				xStep = Math.round(xMax / 15 / x10) * x10,
-				xCnt = Math.ceil (xMax / xStep),
+				[xMax, xStep, xCnt] = steps(f1,f2),
+				//xMax = Math.max(f1,f2),
+				//x10 = Math.pow(10,Math.floor(Math.log10(xMax/15))),
+				// xSteps = steps(f1,f2),
+				// xStep = xSteps[0],
+				// xCnt = xSteps[1],
 				y = Math.max(h1,h2),
 				yMax = Math.max(h1,h2),
 				y10 = Math.pow(10,Math.floor(Math.log10(yMax/15))),
@@ -85,6 +93,8 @@
 				yCnt = Math.ceil (yMax / yStep),
 				hS = h1-(Math.pow(f1,1.9) * (h2-h1) / (Math.pow(f2,1.9) - Math.pow(f1,1.9))),
 				k = (h2-h1)/(Math.pow(f2,1.9)-Math.pow(f1,1.9));
+		// const [xMax, xStep, xCnt] = steps(f1,f2);
+
 		$('#Hs').text(rnd(hS));
 		$('#K').text(rnd(k,6));
 		showHdBtn('hide');
@@ -136,7 +146,7 @@
 		ctx.strokeStyle = "yellow";	
 		ctx.beginPath();
 		
-		for (let x=0; x<=xMax; x+=xStep) {			
+		for (let x=0; x<=xMax; x+=xStep/10) {			
 			ctx.lineTo(xPos(x), yPos(hS+k*Math.pow(x,1.9)));		
 		}
 		ctx.stroke();
