--- a/curve.html
+++ b/curve.html
@@ -83,9 +83,8 @@
 				hS = h1-(Math.pow(f1,1.9) * (h2-h1) / (Math.pow(f2,1.9) - Math.pow(f1,1.9))),
 				k = (h2-h1)/(Math.pow(f2,1.9)-Math.pow(f1,1.9)),
 				[xMax, xStep, xCnt] = steps(f1,f2),
-				[yMax, yStep, yCnt] = steps(h1,h2),
-				cnv = dom(Cnv),
-				ctx = cnv.getContext('2d'),
+				[yMax, yStep, yCnt] = steps(h1,h2),				
+				ctx = Cnv.getContext('2d'),
 				PAD = 50;
 
 		$('#Hs').text(rnd(hS));
@@ -100,22 +99,22 @@
 		ctx.font = '12px san serif';
 		
 		function xPos(x) {
-			return x*(cnv.width-PAD*2)/(xStep*xCnt)+PAD;
+			return x*(Cnv.width-PAD*2)/(xStep*xCnt)+PAD;
 		}
 		function yPos(y) {
-			return (yStep*yCnt-y)*(cnv.height-PAD*2)/(yStep*yCnt)+PAD;
+			return (yStep*yCnt-y)*(Cnv.height-PAD*2)/(yStep*yCnt)+PAD;
 		}
 		ctx.beginPath();
 		for (let i=0; i<=xCnt; i++) {
 			const x = i*xStep, xp = xPos(x);
 			ctx.moveTo(xp,PAD);
-			ctx.lineTo(xp,cnv.height-PAD);	
-			ctx.fillText(x,xp,cnv.height-.75*PAD);	
+			ctx.lineTo(xp,Cnv.height-PAD);	
+			ctx.fillText(x,xp,Cnv.height-.75*PAD);	
 		}
 		for (let j=0; j<=yCnt; j++) {
 			const y = j*yStep, yp = yPos(y);
 			ctx.moveTo(PAD,yp);
-			ctx.lineTo(cnv.width-PAD,yp);	
+			ctx.lineTo(Cnv.width-PAD,yp);	
 			ctx.fillText(y,.75*PAD,yp);	
 		}
 		ctx.stroke();
@@ -123,9 +122,9 @@
 
 		ctx.fillStyle = '#FECB00';
 		ctx.font = '14px san serif';
-		ctx.fillText('FLOW RATE',cnv.width/2,cnv.height-.33*PAD);
+		ctx.fillText('FLOW RATE',Cnv.width/2,Cnv.height-.33*PAD);
 		
-		ctx.translate(.33*PAD,cnv.height/2);
+		ctx.translate(.33*PAD,Cnv.height/2);
 		ctx.rotate(-Math.PI/2);
 		ctx.fillText('HEAD',0,0);	
 		
@@ -151,10 +150,10 @@
 							<td>${Cond[idx-2].name}</td>							
 						</tr>`);
 	});
-	Cnv = $('canvas');
+	Cnv = dom('canvas');
 	pg('input').change(function (){
 		$('#plot').hide();
-		dom('canvas').width+=0;
+		Cnv.width+=0;
 		let show='hide';
 		switch (checked().length) {			
 			case 2:
