--- a/grid.html
+++ b/grid.html
@@ -36,7 +36,7 @@
       <th>
         <button onclick='rm(this)'><i class="fa fa-times"/></button>
         <button onclick='edit(this)'><i class="fa fa-pencil-square-o"></i></button>
-        <button class=ioBtn onclick='showIO(this);'><i class="fa fa-floppy-o"></i></button><br>
+        <button class=ioBtn onclick='showIO(this);'><i class="fa fa-trash-o"></i></button><br>
         <span></span>
       </th>      
   </tr>
