--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             case 'select-one':
               ctl.find('option')[v].selected = true;
           }
-          ctl.trigger('change');
+          //ctl.trigger('change');
         });
       }
 
