--- a/grid.html
+++ b/grid.html
@@ -305,6 +305,7 @@
   function estFLA(e) {
     nm('motor_rated_flc',col(e)).val(fla(colArgs(col(e))));
     vdTol('motor_rated_flc',col(e));
+    nm('motor_rated_flc',col(e)).change();
   }
   function showHdResults(show=false) {
     $('#results,#results~tr').toggle(show);
