--- a/grid.html
+++ b/grid.html
@@ -338,9 +338,11 @@
   }
 
   function gotoHead(e) {
-    Flow = nm('flow',col(e)).val();
-    SG = nm('specific_gravity',col(e)).val();
-    HeadEl = nm('head',col(e));
+    CondSel = colCond(e);
+
+    // Flow = nm('flow',col(e)).val();
+    // SG = nm('specific_gravity',col(e)).val();
+    // HeadEl = nm('head',col(e));
     backload("headTool");
   }
   function edit(e) {
